--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,11 @@
 
 {% block head %}
 {{ super() }}
+
+
 <link rel="shortcut icon" href="#">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -22,13 +25,18 @@
         <img class='me-3' src="{{ logo }}" height="30" alt="mat-o-lab-logo"/>
       </a>
 </header>
-<main class="bg-light rounded-3 px-3">
-    {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
-        </div>
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+       <div class="alert alert-{{ category }}" role="alert">
+       <button type="button" class="close" data-dismiss="alert">&times;</button>
+       {{ message }}
+       </div>
     {% endfor %}
+  {% endif %}
+{% endwith %}
+<main class="bg-light rounded-3 px-3">
+
 
     <div class="container-fluid mb-3">
       <h1 class="display-5 fw-bold">XLStoCSV</h1>
@@ -83,7 +91,7 @@
           </div>
 
         </div>
-        <div class="mb-3">
+        <div class="mb-3" >
           {{ pdf_form.csrf_token }}
           {{ pdf_form.settings.label }}
           {{ pdf_form.settings(class="form-control", **{'aria-describedby': 'urlHelp'}) }}
@@ -98,13 +106,18 @@
             {% endif %}
           </div>
         </div>
-        <button class="form-group btn btn-primary btn-lg" type="submit">Start Conversion</button>
+        <button class="form-group btn btn-primary btn-lg" type="submit" >{{ pdf_form.submit.label }}</button>
+
       </form>
+    <form method="post" action="{{ url_for('excalibur') }}">
+        <button class="form-group btn btn-outline-success btn-lg" type="submit" >Create new settings.json file</button>
+    </form>
+
     </div>
 
 </main>
 <footer class="pt-3 my-4 text-center text-muted border-top">
-  <span class="site-footer-owner"><a href="https://github.com/rfechner/XLStoCSV">TablesToCSV</a> is maintained by <a href="https://matolab.org"><img src="{{ logo }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
+  <span class="site-footer-owner"><a href="https://github.com/Mat-O-Lab/TablesToCSV">TablesToCSV</a> is maintained by <a href="https://matolab.org"><img src="{{ logo }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
 </footer>
 {% endblock %}
 
