Added errorhandling to xls_to_csv method. #9 resolved

--- a/templates/pdf2csv.html
+++ b/templates/pdf2csv.html
@@ -27,7 +27,7 @@
       </a>
 </header>
 {% with messages = get_flashed_messages(with_categories=true) %}
-    <div class="container-fluid collapse {% if messages%} show {% endif %}" id="mappingForm">
+    <div class="container-fluid collapse {% if messages%} show {% endif %}">
         <div class="card card-body">
             {% if messages %}
             {% for category, message in messages %}
