--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <a class="form-group btn btn-primary btn-lg my-3" href="{{ url_for('redirect_to_api') }}">View the API!</a>
         <a class="form-group btn btn-primary btn-lg my-3" href="{{ url_for('xls_to_csv') }}">Convert your Excel file into csvs!</a>
-        <a class="form-group btn btn-primary btn-lg my-3" href="{{ url_for('pdf_to_csv', settings_input="automatic") }}">Convert your PDF file into csvs!</a>
+        <a class="form-group btn btn-primary btn-lg my-3" href="{{ url_for('pdf_to_csv', settings_input="manual") }}">Convert your PDF file into csvs!</a>
 
     </div>
 </main>
